syntax = "proto3";

package goSentinel;

option go_package ="./goSentinel";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";


message User{
    string id = 1;
    string name = 2;
    string email=3;
    string password = 4;
    string token = 5;
    string role =6;
    string isActive = 7;
}

 message Application {
    string id = 1;
    string name = 2;
    string email=3;
    string status = 4;
    string isVerified = 5;
 }
  message VerifyApplicationRequest{
    string key = 1;
  }


 message GetApplicationRequest{
    string id = 1;
 }


 message RegisterUserRequest{ 
    string name = 1;
    string email=2;
    string password = 3;
    string token = 4;
    string role = 5;
 }

 message SendApplicationNotificationRequest{
   string email = 1;
   string name = 2;
 }
 message SendApplicationNotificationResponse{
   string token = 1;
 }

 message GetApplicationSecretResponse{
   string clientID = 1;
   string clientSecret=2;
 }

 service goSentinelService{
    rpc SendVerifcationNotification(SendApplicationNotificationRequest) returns (SendApplicationNotificationResponse);  
    rpc VerifyApplication(VerifyApplicationRequest)returns (google.protobuf.Empty){
      option (google.api.http)={
          get: "/v1/verify/{key}"
      };
  };
  rpc GetApplicationSecrets(google.protobuf.Empty)returns (GetApplicationSecretResponse){
   option (google.api.http)={
      get: "/v1/getSecrets"
  };
  }

 }

